# personal-chatbot-example

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx
