[project]
name = "ai-chatbot-example"
version = "0.1.0"
description = "AI chatbot with FastAPI and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn[standard]>=0.34.0",
    "langchain>=1.3.1",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.0.0",
]
